--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Start Your Project with Yarn
         run: |
-          cd j13Lucas.github.io/j13Lucas.github.io
+          cd ./j13Lucas.github.io
           yarn 
         working-directory: ./
  
