--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -60,6 +60,7 @@ jobs:
 
       - name: Start Your Project with Yarn
         run: |
+          curl -o yarn.lock https://github.com/j13Lucas/j13Lucas.github.io/blob/main/yarn.lock
           ls -a
           pwd
           yarn 
