--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -71,7 +71,9 @@ jobs:
         run: |
           ls -a
           pwd
-          yarn build:prod
+          
+          yarn start
+          yarn run build
         working-directory: ./
       - name: Deploy with Yarn
         run: |
