--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -53,6 +53,7 @@ jobs:
           export NODE_OPTIONS=--openssl-legacy-provider
           set NODE_OPTIONS=--openssl-legacy-provider
           yarn 
+          yarn start
         working-directory: ./
  
       - name: Build with Yarn
