--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -45,9 +45,6 @@ jobs:
           [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
           nvm install 14  # Install the desired Node.js version
           nvm use 14      # Use the installed Node.js version
-          source ~/.nvm/nvm.sh
-          npm install
-          npm audit fix --force
 
       - name: Start Your Project with Yarn
         run: |
@@ -59,7 +56,7 @@ jobs:
           export NODE_OPTIONS=--openssl-legacy-provider
           set NODE_OPTIONS=--openssl-legacy-provider
           npx browserslist@latest --update-db
-          yarn build
+          yarn run build
         working-directory: ./
 
   # Deployment job
