--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -60,9 +60,9 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
+          git config --global user.email "jerry13lucas@gmail.com"
+          git config --global user.name "j13Lucas"
           yarn deploy
-        env:
-          GH_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
 
   # Deployment job
   deploy:
