--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Deploy to GitHub Pages
         run: |
           git config --global user.email "jerry13lucas@gmail.com"
+          git config user.name "Jerry Lucas" 
           yarn deploy
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
