--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -60,6 +60,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
+          git remote remove origin
           git remote add origin https://github.com/j13Lucas/j13Lucas.github.io.git
           git config user.email "jerry13lucas@gmail.com"
           git config user.name "Jerry Lucas" 
