--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -60,6 +60,8 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
+          git config --global user.name "Jerry Lucas"
+          git config --global user.email "jerry13lucas@gmail.com"
           yarn run deploy
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
