--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
-          set :repository, "https://"+${{ secrets.DEPLOY_TOKEN }}+"@github.com/j13Lucas/j13Lucas.github.io.git
+          set :repository, "https://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@github.com/j13Lucas/j13Lucas.github.io.git
           yarn run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
