--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         run: |
-          gh-pages -d build
+          yarn deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
